# ai-discord-moderation-bot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/: __init__.py  api.py  audit.py  bot.py  check_setup.py  config.py  demo.py  image_classifier.py  models.py  moderation.py  rate_limiter.py  text_moderator.py
tests/: test_audit_and_rate_limiter.py  test_demo_and_api.py  test_image_classifier.py  test_live_bot_safety.py  test_setup_safety.py  test_text_moderation.py
