[project]
name = "ai-discord-moderation-bot"
version = "0.1.0"
description = "Portfolio-ready AI Discord moderation bot with PyTorch image screening, REST API, and audit logs."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.9",
    "aiosqlite>=0.19",
    "discord.py>=2.3",
    "python-dotenv>=1.0",
    "torch>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]

